--- a/src/app/compare/Compare.m.scss
+++ b/src/app/compare/Compare.m.scss
@@ -11,9 +11,14 @@
 
 .bucket {
   white-space: nowrap;
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: min-content;
+  grid-auto-columns: min-content 1px;
   flex-direction: row;
   justify-content: flex-start;
+  gap: 0 4px;
+  width: max-content;
 }
 
 .options {
