--- a/src/app/compare/CompareColumns.m.scss
+++ b/src/app/compare/CompareColumns.m.scss
@@ -56,8 +56,8 @@
   --item-size-mod: calc(24 / 50 * var(--item-size));
   composes: noWrap;
   height: var(--item-size-mod) !important;
-  margin-top: 10px;
-  margin-bottom: 4px;
+  padding-top: 10px;
+  padding-bottom: 4px;
 }
 
 .verticalTop {
@@ -92,4 +92,21 @@
   > * {
     margin-top: 0;
   }
+  // TODO push these into sockets component?
+  :global(.plug) {
+    --item-size-mod: calc(26 / 50 * var(--item-size));
+
+    @include phone-portrait {
+      --item-size-mod: 26px;
+    }
+    // This relies on the fact that only mods are img - perks are svg
+    img {
+      --item-size: var(--item-size-mod) !important;
+    }
+  }
+}
+
+// Make room for the item image
+.imageRoom {
+  padding-right: calc(var(--item-size) + 16px);
 }
