--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -21,7 +21,7 @@
   gap: 2px;
   position: sticky;
   left: 0;
-  height: 100%;
+  align-self: stretch;
   background-color: var(--theme-item-sheet-bg);
   z-index: 2;
   border-right: 1px solid #f5f5f540;
@@ -50,37 +50,14 @@
   height: 100%;
   width: 100vw;
   z-index: -1;
+  pointer-events: none;
+}
+
+.lastRow {
+  padding-bottom: 8px;
 }
 
 /* Items */
-
-.compareItem {
-  composes: flexColumn from '../dim-ui/common.m.scss';
-  border-left: 1px solid rgba(245, 245, 245, 0.25);
-  position: relative;
-  // Make sure even if there are no stats that there's enough room to not clip
-  // the icon (e.g. for ghosts)
-  min-height: calc(var(--item-size) + 60px);
-  padding-bottom: 8px;
-
-  > * {
-    padding-left: 4px;
-    padding-right: 4px;
-  }
-
-  // TODO push these into sockets component?
-  :global(.plug) {
-    --item-size-mod: calc(26 / 50 * var(--item-size));
-
-    @include phone-portrait {
-      --item-size-mod: 26px;
-    }
-    // This relies on the fact that only mods are img - perks are svg
-    img {
-      --item-size: var(--item-size-mod) !important;
-    }
-  }
-}
 
 // The toolbar across the top of each item
 .itemActions {
