--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -1,34 +1,31 @@
 @use '../variables.scss' as *;
 
 /* Row Headers */
-
-.spacer {
-  height: var(--compare-item-height, 48px);
-}
-
-.statList {
-  display: flex;
-  flex-direction: column;
-}
-
-.statLabel {
-  position: relative;
-  padding-right: 8px;
+.header {
+  composes: flexRow from '../dim-ui/common.m.scss';
+  align-items: center;
+  padding-right: 16px;
   padding-left: 4px;
   cursor: pointer;
-  height: 16px;
+  gap: 2px;
+  position: sticky;
+  left: 0;
+  align-self: stretch;
+  background-color: var(--theme-item-sheet-bg);
+  z-index: 2;
+  border-right: 1px solid #f5f5f540;
   img {
     height: 16px;
     width: 16px;
     vertical-align: bottom;
-    margin-right: 2px;
   }
 }
-
 .sortDesc {
+  padding-right: 8px;
   color: var(--theme-accent-primary);
 }
 .sortAsc {
+  padding-right: 8px;
   color: var(--theme-accent-secondary);
 }
 
@@ -41,47 +38,17 @@
   height: 100%;
   width: 100vw;
   z-index: -1;
+  pointer-events: none;
+}
+
+.lastRow {
+  padding-bottom: 8px;
 }
 
 /* Items */
 
-.compareItem {
-  composes: flexColumn from '../dim-ui/common.m.scss';
-  border-left: 1px solid rgba(245, 245, 245, 0.25);
-  position: relative;
-  // Make sure even if there are no stats that there's enough room to not clip
-  // the icon (e.g. for ghosts)
-  min-height: calc(var(--item-size) + 60px);
-  padding-bottom: 8px;
-
-  > * {
-    padding-left: 4px;
-    padding-right: 4px;
-  }
-
-  // TODO push these into sockets component?
-  :global(.plug) {
-    --item-size-mod: calc(26 / 50 * var(--item-size));
-
-    @include phone-portrait {
-      --item-size-mod: 26px;
-    }
-    // This relies on the fact that only mods are img - perks are svg
-    img {
-      --item-size: var(--item-size-mod) !important;
-    }
-  }
-}
-
-// D1 talent grids are like sockets
-.talentGrid {
-  padding: 4px 2px 0 2px;
-  max-width: 150px;
-  height: auto;
-}
-
 // The toolbar across the top of each item
-.header {
+.itemActions {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -96,6 +63,17 @@
   > div > div > button {
     padding: 3px !important;
   }
+}
+
+.headerContainer {
+  position: relative;
+}
+
+.separator {
+  width: 0;
+  height: 100%;
+  border-right: 1px solid #f5f5f540;
+  grid-row: 1 / -1; // Span all columns in the grid
 }
 
 // The "dismiss" button in the item header
