--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -36,7 +36,8 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 99vw;
+  // Reserve space for always-on scrollbars :-(
+  width: calc(100vw - 16px - env(safe-area-inset-left) - env(safe-area-inset-right));
   z-index: -1;
   pointer-events: none;
 }
