--- a/src/app/organizer/ItemTypeSelector.m.scss
+++ b/src/app/organizer/ItemTypeSelector.m.scss
@@ -4,7 +4,7 @@
   position: sticky;
   box-sizing: border-box;
   left: calc(8px + env(safe-area-inset-left));
-  // Reserve space for always-on scrollbars :-(
+  // Reserve space for always-on scrollbars (and margin) :-(
   width: calc(100vw - 16px - 16px - env(safe-area-inset-left) - env(safe-area-inset-right));
   padding: 8px;
   margin: 16px 8px 8px 8px;
