--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -1,13 +1,12 @@
-.recoil svg {
-  margin-left: 5px;
-  vertical-align: middle;
-}
+@use '../variables.scss' as *;
 
 .range {
   font-size: 0.9em;
 }
 
 .stat {
+  composes: flexRow from '../dim-ui/common.m.scss';
+  align-items: center;
   height: 16px;
   margin-right: calc(var(--item-size) + 16px);
   // the goal width is 64px at normal item tile size (50px)
@@ -15,6 +14,15 @@
   // so that this doesn't blow out the overall compare width
   width: calc(50px + 64px + 4px - var(--item-size));
   position: relative;
+  font-variant-numeric: tabular-nums;
+  gap: 5px;
+}
+
+.statValue {
+  composes: flexRow from '../dim-ui/common.m.scss';
+  align-items: center;
+  justify-content: flex-end;
+  gap: 3px;
 }
 
 .bar {
@@ -28,4 +36,13 @@
     background-color: rgba(255, 255, 255, 0.25);
     height: 100%;
   }
+}
+
+.masterwork::after {
+  content: '';
+  display: block;
+  border-radius: 50%;
+  background-color: $stat-masterworked;
+  height: 4px;
+  width: 4px;
 }
