--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -28,20 +28,34 @@
   padding-right: 8px;
   color: var(--theme-accent-secondary);
 }
+.highlighted {
+  background-color: #202020;
+}
+.spacer {
+  composes: header;
+  cursor: default !important;
+}
 
 // The highlight behind each item
 .highlightBar {
-  background-color: rgba(255, 255, 255, 0.125);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  // Reserve space for always-on scrollbars :-(
-  width: calc(
-    100vw - var(--scrollbar-width) - env(safe-area-inset-left) - env(safe-area-inset-right)
-  );
-  z-index: -1;
-  pointer-events: none;
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    // Reserve space for always-on scrollbars :-(
+    width: calc(
+      100vw - var(--scrollbar-width) - env(safe-area-inset-left) - env(safe-area-inset-right)
+    );
+    z-index: -1;
+    pointer-events: none;
+  }
+  &.highlighted::after {
+    background-color: #202020;
+  }
 }
 
 .lastRow {
@@ -57,6 +71,8 @@
   align-items: center;
   justify-content: space-between;
   height: 32px;
+  padding-left: 4px;
+  padding-right: 4px;
   // pull & lock buttons
   > div:nth-child(1),
   > div:nth-child(2) {
@@ -98,7 +114,7 @@
 .itemAside {
   position: absolute;
   padding: 0;
-  right: 4px;
+  right: 8px;
   top: calc(32px + 4px + 1lh);
   cursor: pointer;
 }
