--- a/src/app/compare/CompareColumns.m.scss
+++ b/src/app/compare/CompareColumns.m.scss
@@ -58,12 +58,14 @@
   height: var(--item-size-mod) !important;
   padding-top: 10px;
   padding-bottom: 4px;
+  align-items: center !important;
 }
 
 // Perks in the perk/mod columns
 
 .perks {
-  padding-top: 0;
+  padding-top: 4px;
+  padding-bottom: 0;
   > * {
     margin-top: 0;
   }
