--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -1,56 +1,30 @@
 .mod {
-  margin-top: calc(4 / 50 * var(--item-size));
-  margin-right: 7px;
-  .minimal &,
-  .isWeapons & {
-    margin-top: 0;
-    margin-right: 2px;
-  }
-
-  // Shrink down the intrinsic perk - it's super large
   :global(.plug) {
-    --item-size-mod: calc(24 / 50 * var(--item-size));
-    padding: 4px 4px 4px 2px;
+    --item-size-mod: calc(34 / 50 * var(--item-size));
 
     img {
       --item-size: var(--item-size-mod);
-      transform: scale(1.4);
-
-      .minimal & {
-        width: 16px !important;
-        height: 16px !important;
-        transform: scale(1.4);
-      }
     }
   }
 }
 
 .row {
   composes: flexRow from '../dim-ui/common.m.scss';
-  align-items: flex-start;
+  gap: 8px;
   padding: 6px 10px;
   background-color: var(--theme-item-popup-panel-bg);
   width: 100%;
   border-bottom: none;
   box-sizing: border-box;
 
-  &.minimal {
-    background-color: transparent;
+  &.isWeapons {
+    gap: 2px;
     align-items: center;
-    padding: 0;
   }
 
   :global(.armory) & {
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(6px);
-  }
-
-  &.isWeapons {
-    align-items: center;
-
-    &.minimal {
-      padding-left: 0;
-    }
   }
 }
 
@@ -59,7 +33,7 @@
   align-items: flex-start;
   flex: 1;
   width: 0;
-  margin-right: 8px;
+  // margin-right: 8px;
 }
 
 .name {
