--- a/src/app/armory/Armory.m.scss
+++ b/src/app/armory/Armory.m.scss
@@ -30,7 +30,7 @@
 .season {
   display: flex;
   align-items: center;
-  &:nth-child(n + 1) {
+  .header &:nth-child(n + 1) {
     border-left: 1px solid #ccc;
     padding-left: 8px;
     margin-left: 4px;
@@ -115,5 +115,25 @@
 
   @include phone-portrait {
     width: 100%;
+  }
+}
+
+.list {
+  composes: flexColumn from '../dim-ui/common.m.scss';
+  gap: 8px;
+}
+
+.alternate {
+  composes: resetButton from '../dim-ui/common.m.scss';
+  composes: flexRow from '../dim-ui/common.m.scss';
+  gap: 4px;
+  text-align: left;
+  width: max-content;
+
+  b {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
   }
 }
