Try to clean up sockets CSS a bit (#11034)

--- a/src/app/compare/CompareColumns.m.scss
+++ b/src/app/compare/CompareColumns.m.scss
@@ -58,48 +58,32 @@
   height: var(--item-size-mod) !important;
   padding-top: 4px;
   padding-bottom: 4px;
-
-  // Shrink down the intrinsic perk - it's super large
-  :global(.plug) {
-    padding-left: 0;
-  }
 }
 
 // Perks in the perk/mod columns
 
 .perks {
+  --mod-size: calc(24 / 50 * var(--item-size));
   padding-top: 4px;
   padding-bottom: 4px;
-  > * {
-    margin-top: 0;
-  }
-  // TODO push these into sockets component?
-  :global(.plug) {
-    --item-size-mod: calc(26 / 50 * var(--item-size));
 
-    @include phone-portrait {
-      --item-size-mod: 26px;
-    }
-    // This relies on the fact that only mods are img - perks are svg
-    img {
-      --item-size: var(--item-size-mod) !important;
-    }
+  @include phone-portrait {
+    --mod-size: 26px;
   }
 }
 
 .weaponPerksHeader {
   align-items: flex-start !important;
 }
-.weaponPerks {
-  // Trim the perk-circle margins off
-  > * {
-    margin-bottom: -4px;
-    margin-left: -3px;
-    margin-right: -3px;
-  }
-}
 
 // Make room for the item image
 .imageRoom {
   padding-right: calc(var(--item-size) + 16px) !important;
+}
+
+.archetypeRow {
+  --archetype-size: 22px !important;
+  composes: flexRow from '../dim-ui/common.m.scss';
+  align-items: center;
+  gap: 2px;
 }
