--- a/src/app/armory/Armory.m.scss
+++ b/src/app/armory/Armory.m.scss
@@ -120,15 +120,19 @@
 
 .list {
   composes: flexColumn from '../dim-ui/common.m.scss';
-  gap: 8px;
+  gap: 16px;
 }
 
 .alternate {
-  composes: resetButton from '../dim-ui/common.m.scss';
   composes: flexRow from '../dim-ui/common.m.scss';
-  gap: 4px;
+  gap: 8px;
   text-align: left;
   width: max-content;
+  max-width: 100%;
+
+  > *:first-child {
+    flex-shrink: 0;
+  }
 
   b {
     text-transform: uppercase;
@@ -136,4 +140,13 @@
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
   }
+}
+
+.alternateButton {
+  composes: resetButton from '../dim-ui/common.m.scss';
+  composes: item from global;
+}
+
+.alternateWishlist {
+  text-transform: lowercase;
 }
