Right-align 2-digit numbers in Compare

--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -23,6 +23,11 @@
   align-items: center;
   justify-content: flex-end;
   gap: 3px;
+  min-width: 2ch; // Try to right-align 2-digit numbers
+
+  &.noMinWidth {
+    min-width: none;
+  }
 }
 
 .bar {
