--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -26,7 +26,7 @@
   min-width: 2ch; // Try to right-align 2-digit numbers
 
   &.noMinWidth {
-    min-width: none;
+    min-width: unset;
   }
 }
 
