--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -11,13 +11,10 @@
   position: relative;
   font-variant-numeric: tabular-nums;
   gap: 5px;
-  &.forCompare {
-    margin-right: calc(var(--item-size) + 16px);
-    // the goal width is 64px at normal item tile size (50px)
-    // but allow the stat bars to shrink to account for bigger tiles,
-    // so that this doesn't blow out the overall compare width
-    width: calc(50px + 64px + 4px - var(--item-size));
-  }
+  // the goal width is 64px at normal item tile size (50px)
+  // but allow the stat bars to shrink to account for bigger tiles,
+  // so that this doesn't blow out the overall compare width
+  max-width: calc(50px + 64px + 4px - var(--item-size));
 
   &:has(.bar) {
     min-width: 6em;
