--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -49,7 +49,7 @@
   left: calc(30px + env(safe-area-inset-left));
   position: sticky;
   top: calc(var(--header-height) + var(--table-header-height) + var(--item-table-toolbar-height));
-  z-index: table.$header-cells;
+  z-index: table.$header-cells !important;
   > :global(.item) {
     --item-size: var(--icon-item-size) !important;
     height: var(--item-size);
