--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -55,6 +55,7 @@ $content-cells: 5;
   text-align: left;
   border-bottom: 1px solid #ddd !important;
   background: #313233;
+  padding: 4px 8px;
   white-space: nowrap;
   padding-top: 4px !important;
 
