--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -59,6 +59,7 @@
   position: sticky;
   top: calc(var(--header-height) + var(--table-header-height) + var(--item-table-toolbar-height));
   z-index: table.$header-cells !important;
+  background: var(--org-row-bg);
   > :global(.item) {
     --item-size: var(--icon-item-size) !important;
     height: var(--item-size);
@@ -69,8 +70,11 @@
     }
   }
 }
+
 .iconHeader {
   composes: centered;
+  left: calc(30px + env(safe-area-inset-left));
+  position: sticky;
   top: calc(var(--header-height) + var(--item-table-toolbar-height));
 }
 
