--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -118,7 +118,6 @@
     flex-basis: 160px;
   }
 }
-
 .isPerk {
   border-left: 2px solid #888;
   padding-left: 3px;
@@ -163,6 +162,24 @@
     margin-right: 1px;
     margin-left: -7px;
   }
+}
+
+.perksGrid {
+  --mod-size: calc(28 / 50 * var(--item-size));
+  --perk-size: calc(28 / 50 * var(--item-size));
+  padding-top: 4px !important;
+  padding-bottom: 4px;
+
+  @include phone-portrait {
+    --mod-size: 26px;
+  }
+}
+
+// D1 talent grids are like sockets
+.talentGrid {
+  padding: 4px 2px 0 2px;
+  max-width: 150px;
+  height: auto;
 }
 
 .locationCell {
