Simpler stat centering

--- a/src/app/compare/CompareColumns.m.scss
+++ b/src/app/compare/CompareColumns.m.scss
@@ -48,6 +48,13 @@
   height: auto;
 }
 
+.stat {
+  // the goal width is 64px at normal item tile size (50px)
+  // but allow the stat bars to shrink to account for bigger tiles,
+  // so that this doesn't blow out the overall compare width
+  max-width: calc(50px + 64px + 4px - var(--item-size));
+}
+
 .noWrap {
   white-space: nowrap;
 }
