--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -20,15 +20,23 @@
 
 .stats {
   text-align: right;
+  > div {
+    justify-content: center;
+  }
   // Recoil background semi-circle
   svg {
     circle {
       fill: black;
     }
   }
+}
 
-  &[role='columnheader'] {
-    text-align: center;
+.statsHeader {
+  text-align: center;
+  > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     > div {
       display: flex;
       flex-direction: column;
