Add perk grid, ammo type to Organzier (#11078)

--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -10,17 +10,12 @@
   height: 16px;
   position: relative;
   font-variant-numeric: tabular-nums;
-  gap: 5px;
-  // the goal width is 64px at normal item tile size (50px)
-  // but allow the stat bars to shrink to account for bigger tiles,
-  // so that this doesn't blow out the overall compare width
-  max-width: calc(50px + 64px + 4px - var(--item-size));
+  gap: 4px;
 }
 
 .statValue {
   composes: flexRow from '../dim-ui/common.m.scss';
   align-items: center;
-  /* justify-content: flex-end; */
   gap: 3px;
   min-width: 2ch; // Try to right-align 2-digit numbers
 
@@ -30,11 +25,8 @@
 }
 
 .bar {
-  position: absolute;
-  top: 10%;
   height: 80%;
-  left: calc(3ch - 4px);
-  right: 0;
+  width: 100%;
   > span {
     display: block;
     background-color: rgba(255, 255, 255, 0.25);
