--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -20,15 +20,23 @@
 
 .stats {
   text-align: right;
+  > div {
+    justify-content: center;
+  }
   // Recoil background semi-circle
   svg {
     circle {
       fill: black;
     }
   }
+}
 
-  &[role='columnheader'] {
-    text-align: center;
+.statsHeader {
+  text-align: center;
+  > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     > div {
       display: flex;
       flex-direction: column;
@@ -59,6 +67,7 @@
   position: sticky;
   top: calc(var(--header-height) + var(--table-header-height) + var(--item-table-toolbar-height));
   z-index: table.$header-cells !important;
+  background: var(--org-row-bg);
   > :global(.item) {
     --item-size: var(--icon-item-size) !important;
     height: var(--item-size);
@@ -69,8 +78,11 @@
     }
   }
 }
+
 .iconHeader {
   composes: centered;
+  left: calc(30px + env(safe-area-inset-left));
+  position: sticky;
   top: calc(var(--header-height) + var(--item-table-toolbar-height));
 }
 
@@ -114,7 +126,6 @@
     flex-basis: 160px;
   }
 }
-
 .isPerk {
   border-left: 2px solid #888;
   padding-left: 3px;
@@ -159,6 +170,24 @@
     margin-right: 1px;
     margin-left: -7px;
   }
+}
+
+.perksGrid {
+  --mod-size: calc(28 / 50 * var(--item-size));
+  --perk-size: calc(28 / 50 * var(--item-size));
+  padding-top: 4px !important;
+  padding-bottom: 4px;
+
+  @include phone-portrait {
+    --mod-size: 26px;
+  }
+}
+
+// D1 talent grids are like sockets
+.talentGrid {
+  padding: 4px 2px 0 2px;
+  max-width: 150px;
+  height: auto;
 }
 
 .locationCell {
